css/index.css
/* ... */
/* Navbar */
#navigation .navbar-default,
.nav-sidebar .navbar-default {
    background-color: #FFFFFF;
    border: none;
}
#navigation .navbar-default .navbar-nav > li > a {
    text-transform: uppercase;
    color: #6f50a2;
    font-family: "Proxima-Nova-bold", sans-serif;
    font-size: 10px;
    padding-right: 60px;
}
.nav-on-top > li.nav-link-right {
    margin-left: 143px;
    margin-top: 14px;
}
.nav-link-right p a {
    text-transform: uppercase;
    color: #6f50a2;
    font-family: "Proxima-Nova-bold", sans-serif;
    font-size: 10px;
}
.nav-link-right .or-text {
    text-transform: lowercase;
    font-size: 10px;
}
.header-logo {
    margin-top: 10px;
}
.header-links {
    margin-top: 20px;
}
.header-link-right {
    margin-left: 6%;
}
.header-links img {
    position: absolute;
    margin: 4px 0 0 -40px;
}
.nav-on-bottom a,
.header-links .phone-number {
    color: #6f50a2;
    font-family: "Proxima-Nova-bold", sans-serif;
    font-size: 16px;
}
.nav-on-bottom p {
    color: #6f50a2;
    font-size: 13px;
    font-style: italic;
    margin-top: 3px;
    margin-left: -30px;
}
.nav-underline {
    z-index: 3;
    height: 1px;
    width: 100%;
    background-color: #ebeaf6;
    margin-top: 40px;
}
/* Basket */
#basket {
    background-color: #fcd240;
    z-index: 2;
}
#basket:hover {
    background-color: #ffdc4a;
}
#basket #img-basket {
    z-index: 1;
    padding: 20px 34px 20px 34px;
}
#basket li p {
    font-size: 13px;
    color: #604292;
    text-align: center;
    padding-bottom: 20px;
}
#circle {
    z-index: 2;
    position: absolute;
    height: 25px;
    width: 25px;
    border-radius: 50%;
    background-color: #FFFFFF;
    margin: 10px 0 0 65px;
}
#circle p {
    text-align: center;
    padding-top: 3px;
}
/* Sidebar */
#sidebar-navigation .navbar-default .sidebar {
    border: none;
}
#sidebar-navigation .sidebar-header {
    background-color: #604292;
    color: #FFFFFF;
    font-size: 14px;
    text-transform: uppercase;
}
#sidebar-navigation .sidebar-header {
    padding: 30px 0 20px 10px;
}
#sidebar-navigation .sidebar-top-icon {
    padding-left: 20%;
}
#sidebar-navigation .sidebar-header p {
    font-style: italic;
    font-family: "Proxima-Nova-Extrabold", sans-serif;
    letter-spacing: 2px;
}
#sidebar-navigation .sidebar-number {
    font-style: italic;
    padding-left: 10px;
}
#sidebar-navigation nav.sidebar .navbar-nav .open .dropdown-menu>li>a:hover,
#sidebar-navigation nav.sidebar .navbar-nav .open .dropdown-menu>li>a:focus {
    background-color: transparent;
}
#sidebar-navigation .navbar-default .navbar-nav > .active > a,
#sidebar-navigation .navbar-default .navbar-nav > .active > a:hover,
#sidebar-navigation .navbar-default .navbar-nav > .active > a:focus {
    background-color: #6f50a2;
    color: #FFFFFF;
}
#sidebar-navigation .dropdown .active {
    border: none;
}
#sidebar-navigation .navbar-default .navbar-nav > .open > a,
#sidebar-navigation .navbar-default .navbar-nav > .open > a:hover,
#sidebar-navigation .navbar-default .navbar-nav > .open > a:focus {
    background-color: #6f50a2;
    color: #FFFFFF; !important;
    border-bottom: 2px solid #fcd240;
}
#sidebar-navigation .navbar-nav > li > a.dropdown-toggle,
#sidebar-navigation .navbar-default .navbar-nav > li > a:hover,
#sidebar-navigation .navbar-default .navbar-nav > li > a:focus {
    color: #6f50a2;
    font: 14px "Proxima-Nova-bold", sans-serif;
    padding: 25px 0 25px 25px;
}
#sidebar-navigation .dropdown li a {
    font: 13px "Proxima-Nova", sans-serif;
    color: #FFFFFF;
    line-height: 20px;
}
#sidebar-navigation .dropdown li a:hover {
    color: #aa92d1;
    transition: all 0.3s;
}
#sidebar-navigation .dropdown ul {
    padding: 25px 0 25px 5px;
}
#sidebar-navigation .dropdown-menu {
    background-color: #604292;
}
#sidebar-navigation .dropdown .caret {
    color: #fcd240;
    transform: rotate(-90deg);
    float: right;
    margin-right: 20px;
}
#sidebar-navigation .dropdown:hover .caret {
    transform: rotate(0deg);
}
/* Slider */
.carousel-caption h1 {
    font: 48px "Proxima-Nova-Extrabold", sans-serif;
    text-transform: uppercase;
    font-style: italic;
    text-align: left;
    margin-left: -80px;
    margin-bottom: 35%;
}
.carousel-caption .highlight {
    color: #fcd240;
}
/* Indicators */
.slider .pagination {
    margin: 0;
    margin-left: 150px;
}
.slider .pagination > li:first-child > a,
.slider .pagination > li:first-child > span,
.slider .pagination > li:last-child > a,
.slider .pagination > li:last-child > span{
    border-radius: 0;
}
.slider .pagination > li > a,
.slider .pagination > li > span {
    font: 10px "Proxima-Nova-Extrabold", sans-serif;
    color: #493164;
    font-style: italic;
    border: none;
    padding: 15px 20px;
    cursor: pointer;
}
.slider .pagination > .active > a,
.slider .pagination > .active > span,
.slider .pagination > .active > a:hover,
.slider .pagination > .active > span:hover,
.slider .pagination > .active > a:focus,
.slider .pagination > .active > span:focus,
.slider .pagination > li > a:hover,
.slider .pagination > li > span:hover,
.slider .pagination > li > a:focus, .pagination > li > span:focus {
    background-color: #6f50a2;
    color: #FFFFFF;
}
/* Search */
#search-box {
    background-color: #ebeaf6;
    padding: 23.5px 20px;
}
#search-box form {
    margin:0;
    padding: 0;
    width: 400px;
}
#search-box form input {
    border: none;
    color: #a8a8b4;
    font: 13px "Proxima-Nova-It", cursiva;
    background-color: transparent;
}
#search-box form input:focus::-webkit-input-placeholder {opacity: 0; transition: opacity 0.3s ease;}
#search-box form input:focus::-moz-placeholder          {opacity: 0; transition: opacity 0.3s ease;}
#search-box form input:focus:-moz-placeholder           {opacity: 0; transition: opacity 0.3s ease;}
#search-box form input:focus:-ms-input-placeholder      {opacity: 0; transition: opacity 0.3s ease;}
/* ... */

